<resources>
    <string name="app_name">MerchTeck</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="google_maps_key">AIzaSyAtoJ5CP8vrmdcTeDef7djrgN91Ghz0sZg</string>
    <string name="name">Name</string>
    <string name="product_search_barcode">Product Search / Barcode</string>
    <string name="client_name">Client Name</string>
    <string name="required_fields">Required Fields</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add">Add</string>
    <string name="categories_name">Categories Name</string>
    <string name="sub_categories">Sub Categories</string>
    <string name="store_type">Store Type</string>
    <string name="store_name">Store Name</string>
    <string name="required_field">Required Field</string>
    <string name="enter_adress">Enter Address</string>
    <string name="address">Address</string>
    <string name="num">12345</string>
    <string name="products_required">Products Required</string>
    <string name="product_name">product name</string>
    <string name="next">Next</string>
    <string name="steps">Steps</string>
    <string name="add_before_pictures">Add Before Pictures</string>
    <string name="add_after_pictures">Add After Pictures</string>
    <string name="product_name_barcode">Product Name / Barcode</string>
    <string name="product_available_on_shelf">Product Available On Shelf</string>
    <string name="near_expiry">Near Expiry</string>
    <string name="stock_count">Stock Count</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="over_stock">Over Stock</string>
    <string name="shelf_space">Shelf Space</string>
    <string name="clients_comments">Clients Comments</string>
    <string name="comments">Comments</string>
    <string name="skip">SKIP</string>
    <string name="competitor_data">Competitor Data</string>
    <string name="add_images">Add Images</string>
    <string name="task_1">Task 1</string>
    <string name="lexux_contry">Lexux Contry</string>
    <string name="_22_street_new_town_33002">22 Street New Town 33002</string>
    <string name="view">View</string>
    <string name="task_5">Task 5</string>
    <string name="task_12">Task 12</string>
    <string name="task_20">Task 20</string>
    <string name="task_26">Task 26</string>
    <string name="task_30">Task 30</string>
    <string name="task_32">Task 32</string>
    <string name="task_35">Task 35</string>
    <string name="date">Date</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_destination_maps">Map</string>
    <string name="todo">ToDo</string>
    <string name="submit">Submit</string>
</resources>
