<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/product_available_on_shelf"
                android:textColor="@color/colordarkblue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/dialouge_rgb_availableshelf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/dialouge_availableshelf_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/yes"
                    android:textColor="@color/colorblue" />

                <RadioButton
                    android:id="@+id/dialouge_availableshelf_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/no"
                    android:textColor="@color/colorblue" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/near_expiry"
                android:textColor="@color/colordarkblue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/dialouge_rgb_nearexpiary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/dialouge_nearexpiry_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/yes"
                    android:textColor="@color/colorblue" />

                <RadioButton
                    android:id="@+id/dialouge_nearexpiry_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/no"
                    android:textColor="@color/colorblue" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/stock_count"
                android:textColor="@color/colordarkblue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/dialouge_rgb_stockcount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/dialouge_rb_outofstock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/out_of_stock"
                    android:textColor="@color/colorblue" />

                <RadioButton
                    android:id="@+id/dialouge_rb_overstock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/over_stock"
                    android:textColor="@color/colorblue" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/shelf_space"
                android:textColor="@color/colordarkblue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/dialouge_rgb_shelfspace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/dialouge_shelfspace_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@color/colorblue" />

                <RadioButton
                    android:id="@+id/dialouge_shelfspace_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/no"
                    android:textColor="@color/colorblue" />

            </RadioGroup>


            <Button
                android:id="@+id/dialouge_checkin_product_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="25dp"
                android:background="@drawable/oncancelshape"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="@color/colorWhite" />
        </LinearLayout>


    </ScrollView>

</RelativeLayout>