<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProducts_stepActivity">


    <RelativeLayout
        android:id="@+id/rl3a"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"

        >
        <include layout="@layout/toolbar_all" android:id="@+id/addstore_steps_toolbar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView_steps"
            android:layout_below="@+id/addstore_steps_toolbar"
            >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/product_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_search_barcode"
                android:textColor="@color/colordarkblue"
                android:textSize="25sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:id="@+id/checkin_product_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/edittextshape"
                    android:hint="@string/required_fields"
                    android:padding="12dp"
                    android:textColorHint="@color/colorblue" />

                <ImageView
                    android:id="@+id/barcode_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"

                    android:src="@drawable/cameraicon" />


            </LinearLayout>




<!--
            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Product Name / Barcode"
                android:textColor="@color/colordarkblue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:id="@+id/checkin_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/edittextshape"
                    android:hint="Required Fields"
                    android:padding="12dp"
                    android:textColorHint="@color/colorblue" />

                <ImageView
                    android:id="@+id/barcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/cameraicon" />


            </LinearLayout>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/client_name"
                android:textColor="@color/colordarkblue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/checkin_client_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/required_fields"
                android:padding="12dp"
                android:textColorHint="@color/colorblue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/product_available_on_shelf"
                android:textColor="@color/colordarkblue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rgb_availableshelf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/availableshelf_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/yes"
                    android:textColor="@color/colorblue" />

                <RadioButton
                    android:id="@+id/availableshelf_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/no"
                    android:textColor="@color/colorblue" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/near_expiry"
                android:textColor="@color/colordarkblue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rgb_nearexpiary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/nearexpiry_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/yes"
                    android:textColor="@color/colorblue" />

                <RadioButton
                    android:id="@+id/nearexpiry_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/no"
                    android:textColor="@color/colorblue" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/stock_count"
                android:textColor="@color/colordarkblue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rgb_stockcount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_outofstock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/out_of_stock"
                    android:textColor="@color/colorblue" />

                <RadioButton
                    android:id="@+id/rb_overstock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/over_stock"
                    android:textColor="@color/colorblue" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/shelf_space"
                android:textColor="@color/colordarkblue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rgb_shelfspace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/shelfspace_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/yes"
                    android:textColor="@color/colorblue" />

                <RadioButton
                    android:id="@+id/shelfspace_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/no"
                    android:textColor="@color/colorblue" />

            </RadioGroup>

            <Button
                android:id="@+id/checkin_product_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:background="@drawable/oncancelshape"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        </ScrollView>

    </RelativeLayout>



</RelativeLayout>