<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStoreActivity">

    <include
        android:id="@+id/addstore_toolbar"
        layout="@layout/toolbar_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </include>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@+id/addstore_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <Chronometer
                android:id="@+id/addstorechronometerExample"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvaddstoretype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/store_type"
                android:textColor="@color/colordarkblue"
                android:textSize="18sp"
                android:textStyle="bold"


                />

            <LinearLayout
                android:id="@+id/ln"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvaddstoretype"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/cardview"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/addstore_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvaddstorename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ln"
                android:layout_marginStart="20dp"
                android:text="@string/store_name"
                android:textColor="@color/colordarkblue"
                android:textSize="18sp"
                android:textStyle="bold"


                />


            <EditText
                android:id="@+id/et_addstorename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvaddstorename"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/cardview"
                android:hint="@string/required_field"
                android:inputType="textPersonName"
                android:padding="20dp" />


            <TextView
                android:id="@+id/tvaddclientname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_addstorename"
                android:layout_marginStart="20dp"
                android:text="@string/client_name"
                android:textColor="@color/colordarkblue"
                android:textSize="18sp"
                android:textStyle="bold"


                />


            <EditText
                android:id="@+id/et_addclientname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvaddclientname"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/cardview"
                android:hint="@string/required_field"
                android:inputType="textPersonName"
                android:padding="20dp"

                />


            <TextView
                android:id="@+id/tvaddnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_addclientname"
                android:layout_marginStart="20dp"
                android:inputType="phone"
                android:text="Number"
                android:textColor="@color/colordarkblue"
                android:textSize="18sp"
                android:textStyle="bold"


                />


            <EditText
                android:id="@+id/et_addnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvaddnumber"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/cardview"
                android:hint="@string/num"
                android:inputType="phone"
                android:padding="20dp"

                />


            <TextView
                android:id="@+id/tvaddadress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_addnumber"
                android:layout_marginStart="20dp"
                android:text="@string/address"
                android:textColor="@color/colordarkblue"
                android:textSize="18sp"
                android:textStyle="bold"


                />


            <EditText
                android:id="@+id/et_addaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvaddadress"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/cardview"
                android:hint="@string/enter_adress"
                android:inputType="textPostalAddress"

                android:padding="20dp"

                />


            <TextView
                android:id="@+id/tvaddproductrequired"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_addaddress"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/products_required"
                android:textColor="@color/colordarkblue"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />


            <LinearLayout
                android:id="@+id/ln_products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvaddproductrequired"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"

                    android:layout_marginEnd="20dp"
                    android:background="@drawable/cardview"
                    android:orientation="vertical"

                    >

                    <Spinner
                        android:id="@+id/addstore_products_spiner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:padding="20dp"
                        android:tag="Required Products"
                        android:visibility="gone" />


                </LinearLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp">

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="20dp"
                            android:text="@string/product_name"
                            android:textStyle="bold"
                            android:visibility="gone" />
                    </TableRow>

                </TableLayout>


            </LinearLayout>

            <Button
                android:id="@+id/addnewstore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ln_products"
                android:layout_marginHorizontal="120dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/oncancelshape"
                android:text="@string/add"
                android:textColor="@color/colorWhite"


                />


        </RelativeLayout>


    </ScrollView>


</RelativeLayout>